--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
     overflow-x: hidden;
+    font-family: 'Roboto', 'sans-serif';
+    
 }
