--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 :root {
     overflow-x: hidden;
     font-family: 'Roboto', 'sans-serif';
+    scroll-behavior: smooth;
     background-color: #101034;
 }
 
